editing html file

--- a/htmltegslesson_4/index.html
+++ b/htmltegslesson_4/index.html
@@ -62,7 +62,9 @@
 				<button tabindex="11" type="submit">Отправить</button>
 				<button tabindex="12" type="reset">Очистить</button>
 			</div>
-
+			<div>
+				<textarea name="" id="" cols="30" rows="10"></textarea>
+			</div>
 		</div>
 	</form>
 </body>
