--- a/htmltegslesson_4/index.html
+++ b/htmltegslesson_4/index.html
@@ -66,6 +66,10 @@
 				<textarea name="" id="" cols="30" rows="10"></textarea>
 			</div>
 		</div>
+		<div>
+			<button type="submit">Second commit
+			</button>
+		</div>
 	</form>
 </body>
 
