--- a/htmltegslesson_4/index.html
+++ b/htmltegslesson_4/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>HTML уроки. HTML теги форм. HTML input. Уроки HTML CSS JS. Урок №4 </title>
 </head>
 
